Match `Long Hee`

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
 <body>
     <h1>Raad het station</h1>
-    <label>Stationsnaam: <input type="text" id="idInput" list="isStationsnamen" class="input" placeholder="Enter the station name"  value="Maarten rolt de car" /></label>
+    <label>Stationsnaam: <input type="text" id="idInput" list="isStationsnamen" class="input" placeholder="Voer de fictieve stationsnaam in"  value="Maarten rolt de car" /></label>
     <datalist id="isStationsnamen">
-        <option value="Maarten rolt de car">
-        <option value="Armbandatelier Jammers">
-        <option value="Baanlicht Taureem">
+        <option value="Armbandatelier Jammers"></option>
+        <option value="Baanlicht Taureem"></option>
+        <option value="Der Duit Mozart"></option>
+        <option value="Long Hee"></option>
+        <option value="Maarten rolt de car"></option>
+        <option value="Pennie Vuwen"></option>
+        <option value="Recht ut Craalent"></option>
       </datalist>
     <br>
     <label>Oplossing(en):<br><textarea id="idOutput" class="output" readonly>
@@ -415,6 +419,7 @@
         Zwolle
         Zwolle Stadshagen
             </textarea></label>
-
+    <br>
+    De oplossing staat op de <a href="https://www.ns.nl/dagje-uit/ontspanning/puzzel.html" target="_blank">website van de NS</a>. Code staat op <a href="https://github.com/basgroot/puzzel-in-de-trein" target="_blank">Github</a>.
 </body>
 </html>
