--- a/index.html
+++ b/index.html
@@ -23,415 +23,414 @@
         <option value="Recht ut Craalent"></option>
     </datalist>
     <br>
-    <label>Oplossing(en):<br>
-        <textarea id="idOutput" class="output" readonly>
-            Aalten
-            Abcoude
-            Akkrum
-            Alkmaar
-            Alkmaar Noord
-            Almelo
-            Almelo de Riet
-            Almere Buiten
-            Almere Centrum
-            Almere Muziekwijk
-            Almere Oostvaarders
-            Almere Parkwijk
-            Almere Poort
-            Alphen a/d Rijn
-            Alphen aan den Rijn
-            Amersfoort Centraal
-            Amersfoort Schothorst
-            Amersfoort Vathorst
-            Amsterdam Amstel
-            Amsterdam ArenA
-            Amsterdam Bijlmer ArenA
-            Amsterdam Centraal
-            Amsterdam Holendrecht
-            Amsterdam Lelylaan
-            Amsterdam Muiderpoort
-            Amsterdam RAI
-            Amsterdam Science Park
-            Amsterdam Sloterdijk
-            Amsterdam Zuid
-            Anna Paulowna
-            Apeldoorn
-            Apeldoorn de Maten
-            Apeldoorn Osseveld
-            Appingedam
-            Arkel
-            Arnemuiden
-            Arnhem Centraal
-            Arnhem Presikhaaf
-            Arnhem Velperpoort
-            Arnhem Zuid
-            Assen
-            Baarn
-            Bad Nieuweschans
-            Baflo
-            Barendrecht
-            Barneveld Centrum
-            Barneveld Noord
-            Barneveld Zuid
-            Bedum
-            Beek-Elsloo
-            Beesd
-            Beilen
-            Bergen op Zoom
-            Best
-            Beverwijk
-            Bilthoven
-            Blerick
-            Bloemendaal
-            Bodegraven
-            Borne
-            Boskoop
-            Boskoop Snijdelwijk
-            Boven Hardinxveld
-            Bovenkarspel Flora
-            Bovenkarspel-Grootebroek
-            Boxmeer
-            Boxtel
-            Breda
-            Breda-Prinsenbeek
-            Breukelen
-            Brummen
-            Buitenpost
-            Bunde
-            Bunnik
-            Bussum Zuid
-            Capelle Schollevaar
-            Castricum
-            Chèvremont
-            Coevorden
-            Cuijk
-            Culemborg
-            Daarlerveen
-            Dalen
-            Dalfsen
-            De Vink
-            De Westereen
-            Deinum
-            Delden
-            Delft
-            Delft Campus
-            Delfzijl
-            Delfzijl West
-            Den Dolder
-            Den Haag Centraal
-            Den Haag Hollands Spoor
-            Den Haag HS
-            Den Haag Laan van NOI
-            Den Haag Mariahoeve
-            Den Haag Moerwijk
-            Den Haag Ypenburg
-            Den Helder
-            Den Helder Zuid
-            Deurne
-            Deventer
-            Deventer Colmschate
-            Deventer de Scheg
-            Didam
-            Diemen
-            Diemen Zuid
-            Dieren
-            Doetinchem
-            Doetinchem de Huet
-            Dordrecht
-            Dordrecht Stadspolders
-            Dordrecht Zuid
-            Driebergen-Zeist
-            Driehuis
-            Dronryp
-            Dronten
-            Duiven
-            Duivendrecht
-            Echt
-            Ede Centrum
-            Ede-Wageningen
-            Eemshaven
-            Eijsden
-            Eindhoven Centraal
-            Eindhoven Stadion
-            Eindhoven Strijp-S
-            Elst
-            Emmen
-            Emmen Zuid
-            Enkhuizen
-            Enschede
-            Enschede de Eschmarke
-            Enschede Kennispark
-            Ermelo
-            Etten-Leur
-            Eygelshoven
-            Eygelshoven Markt
-            Feanwâlden
-            Franeker
-            Gaanderen
-            Geldermalsen
-            Geldrop
-            Geleen-Lutterade
-            Geleen Oost
-            Gilze-Rijen
-            Glanerbrug
-            Goes
-            Goor
-            Gorinchem
-            Gouda
-            Gouda Goverwelle
-            Gramsbergen
-            Grijpskerk
-            Groningen
-            Groningen Europapark
-            Groningen Noord
-            Grou-Jirnsum
-            Haarlem
-            Haarlem Spaarnwoude
-            Halfweg-Zwanenburg
-            't Harde
-            Hardenberg
-            Harderwijk
-            Hardinxveld Blauwe Zoom
-            Hardinxveld-Giessendam
-            Haren
-            Harlingen
-            Harlingen Haven
-            Heemskerk
-            Heemstede-Aerdenhout
-            Heerenveen
-            Heerenveen IJsstadion
-            Heerhugowaard
-            Heerlen
-            Heerlen Woonboulevard
-            Heeze
-            Heiloo
-            Heino
-            Helmond
-            Helmond Brandevoort
-            Helmond Brouwhuis
-            Helmond 't Hout
-            Hemmen-Dodewaard
-            Hengelo
-            Hengelo Gezondheidspark
-            Hengelo Oost
-            's-Hertogenbosch
-            's-Hertogenbosch Oost
-            Hillegom
-            Hilversum
-            Hilversum Media Park
-            Hilversum Noord
-            Hilversum Sportpark
-            Hindeloopen
-            Hoensbroek
-            Hoevelaken
-            Hollandsche Rading
-            Holten
-            Hoofddorp
-            Hoogeveen
-            Hoogezand-Sappemeer
-            Hoogkarspel
-            Hoorn
-            Hoorn Kersenboogerd
-            Horst-Sevenum
-            Houten
-            Houten Castellum
-            Houthem-Sint Gerlach
-            Houthem-St. Gerlach
-            Hurdegaryp
-            Kampen
-            Kampen Zuid
-            Kapelle-Biezelinge
-            Kerkrade Centrum
-            Kesteren
-            Klarenbeek
-            Klimmen-Ransdaal
-            Koog aan de Zaan
-            Koudum-Molkwerum
-            Krabbendijke
-            Krommenie-Assendelft
-            Kropswolde
-            Kruiningen-Yerseke
-            Lage Zwaluwe
-            Landgraaf
-            Lansingerland-Zoetermeer
-            Leerdam
-            Leeuwarden
-            Leeuwarden Camminghaburen
-            Leiden Centraal
-            Leiden Lammenschans
-            Lelystad Centrum
-            Lichtenvoorde-Groenlo
-            Lochem
-            Loppersum
-            Lunteren
-            Maarheeze
-            Maarn
-            Maarssen
-            Maastricht
-            Maastricht Noord
-            Maastricht Randwyck
-            Mantgum
-            Mariënberg
-            Martenshoek
-            Meerssen
-            Meppel
-            Middelburg
-            Mook-Molenhoek
-            Naarden-Bussum
-            Nieuw Amsterdam
-            Nieuw Vennep
-            Nieuwerkerk a/d IJssel
-            Nieuwerkerk aan den IJssel
-            Nijkerk
-            Nijmegen
-            Nijmegen Dukenburg
-            Nijmegen Goffert
-            Nijmegen Heyendaal
-            Nijmegen Lent
-            Nijverdal
-            Nunspeet
-            Nuth
-            Obdam
-            Oisterwijk
-            Oldenzaal
-            Olst
-            Ommen
-            Oosterbeek
-            Opheusden
-            Oss
-            Oss West
-            Oudenbosch
-            Overveen
-            Purmerend
-            Purmerend Overwhere
-            Purmerend Weidevenne
-            Putten
-            Raalte
-            Ravenstein
-            Reuver
-            Rheden
-            Rhenen
-            Rijssen
-            Rijswijk
-            Rilland-Bath
-            Roermond
-            Roodeschool
-            Roosendaal
-            Rosmalen
-            Rotterdam Alexander
-            Rotterdam Blaak
-            Rotterdam Centraal
-            Rotterdam Lombardijen
-            Rotterdam Noord
-            Rotterdam Stadion
-            Rotterdam Zuid
-            Ruurlo
-            Santpoort Noord
-            Santpoort Zuid
-            Sappemeer Oost
-            Sassenheim
-            Sauwerd
-            Schagen
-            Scheemda
-            Schiedam Centrum
-            Schin op Geul
-            Schinnen
-            Schiphol Airport
-            Sittard
-            Sliedrecht
-            Sliedrecht Baanhoek
-            Sneek
-            Sneek Noord
-            Soest
-            Soest Zuid
-            Soestdijk
-            Spaubeek
-            Stavoren
-            Stedum
-            Steenwijk
-            Susteren
-            Swalmen
-            Tegelen
-            Terborg
-            Tiel
-            Tiel Passewaaij
-            Tilburg
-            Tilburg Reeshof
-            Tilburg Universiteit
-            Twello
-            Uitgeest
-            Uithuizen
-            Uithuizermeeden
-            Usquert
-            Utrecht Centraal
-            Utrecht Leidsche Rijn
-            Utrecht Lunetten
-            Utrecht Maliebaan
-            Utrecht Overvecht
-            Utrecht Terwijde
-            Utrecht Vaartsche Rijn
-            Utrecht Zuilen
-            Valkenburg
-            Varsseveld
-            Veendam
-            Veenendaal Centrum
-            Veenendaal-De Klomp
-            Veenendaal West
-            Velp
-            Venlo
-            Venray
-            Vierlingsbeek
-            Vleuten
-            Vlissingen
-            Vlissingen Souburg
-            Voerendaal
-            Voorburg
-            Voorhout
-            Voorschoten
-            Voorst-Empe
-            Vorden
-            Vriezenveen
-            Vroomshoop
-            Vught
-            Waddinxveen
-            Waddinxveen Noord
-            Waddinxveen Triangel
-            Warffum
-            Weert
-            Weesp
-            Wehl
-            Westervoort
-            Wezep
-            Wierden
-            Wijchen
-            Wijhe
-            Winschoten
-            Winsum
-            Winterswijk
-            Winterswijk West
-            Woerden
-            Wolfheze
-            Wolvega
-            Workum
-            Wormerveer
-            IJlst
-            Zaandam
-            Zaandam Kogerveld
-            Zaandijk Zaanse Schans
-            Zaltbommel
-            Zandvoort aan Zee
-            Zetten-Andelst
-            Zevenaar
-            Zevenbergen
-            Zoetermeer
-            Zoetermeer Oost
-            Zuidbroek
-            Zuidhorn
-            Zutphen
-            Zwijndrecht
-            Zwolle
-            Zwolle Stadshagen
-    </textarea></label>
+    <div id="idOutput" class="output"></div>
+    <textarea id="idStations" style="display:none;">
+Aalten
+Abcoude
+Akkrum
+Alkmaar
+Alkmaar Noord
+Almelo
+Almelo de Riet
+Almere Buiten
+Almere Centrum
+Almere Muziekwijk
+Almere Oostvaarders
+Almere Parkwijk
+Almere Poort
+Alphen a/d Rijn
+Alphen aan den Rijn
+Amersfoort Centraal
+Amersfoort Schothorst
+Amersfoort Vathorst
+Amsterdam Amstel
+Amsterdam ArenA
+Amsterdam Bijlmer ArenA
+Amsterdam Centraal
+Amsterdam Holendrecht
+Amsterdam Lelylaan
+Amsterdam Muiderpoort
+Amsterdam RAI
+Amsterdam Science Park
+Amsterdam Sloterdijk
+Amsterdam Zuid
+Anna Paulowna
+Apeldoorn
+Apeldoorn de Maten
+Apeldoorn Osseveld
+Appingedam
+Arkel
+Arnemuiden
+Arnhem Centraal
+Arnhem Presikhaaf
+Arnhem Velperpoort
+Arnhem Zuid
+Assen
+Baarn
+Bad Nieuweschans
+Baflo
+Barendrecht
+Barneveld Centrum
+Barneveld Noord
+Barneveld Zuid
+Bedum
+Beek-Elsloo
+Beesd
+Beilen
+Bergen op Zoom
+Best
+Beverwijk
+Bilthoven
+Blerick
+Bloemendaal
+Bodegraven
+Borne
+Boskoop
+Boskoop Snijdelwijk
+Boven Hardinxveld
+Bovenkarspel Flora
+Bovenkarspel-Grootebroek
+Boxmeer
+Boxtel
+Breda
+Breda-Prinsenbeek
+Breukelen
+Brummen
+Buitenpost
+Bunde
+Bunnik
+Bussum Zuid
+Capelle Schollevaar
+Castricum
+Chèvremont
+Coevorden
+Cuijk
+Culemborg
+Daarlerveen
+Dalen
+Dalfsen
+De Vink
+De Westereen
+Deinum
+Delden
+Delft
+Delft Campus
+Delfzijl
+Delfzijl West
+Den Dolder
+Den Haag Centraal
+Den Haag Hollands Spoor
+Den Haag HS
+Den Haag Laan van NOI
+Den Haag Mariahoeve
+Den Haag Moerwijk
+Den Haag Ypenburg
+Den Helder
+Den Helder Zuid
+Deurne
+Deventer
+Deventer Colmschate
+Deventer de Scheg
+Didam
+Diemen
+Diemen Zuid
+Dieren
+Doetinchem
+Doetinchem de Huet
+Dordrecht
+Dordrecht Stadspolders
+Dordrecht Zuid
+Driebergen-Zeist
+Driehuis
+Dronryp
+Dronten
+Duiven
+Duivendrecht
+Echt
+Ede Centrum
+Ede-Wageningen
+Eemshaven
+Eijsden
+Eindhoven Centraal
+Eindhoven Stadion
+Eindhoven Strijp-S
+Elst
+Emmen
+Emmen Zuid
+Enkhuizen
+Enschede
+Enschede de Eschmarke
+Enschede Kennispark
+Ermelo
+Etten-Leur
+Eygelshoven
+Eygelshoven Markt
+Feanwâlden
+Franeker
+Gaanderen
+Geldermalsen
+Geldrop
+Geleen-Lutterade
+Geleen Oost
+Gilze-Rijen
+Glanerbrug
+Goes
+Goor
+Gorinchem
+Gouda
+Gouda Goverwelle
+Gramsbergen
+Grijpskerk
+Groningen
+Groningen Europapark
+Groningen Noord
+Grou-Jirnsum
+Haarlem
+Haarlem Spaarnwoude
+Halfweg-Zwanenburg
+'t Harde
+Hardenberg
+Harderwijk
+Hardinxveld Blauwe Zoom
+Hardinxveld-Giessendam
+Haren
+Harlingen
+Harlingen Haven
+Heemskerk
+Heemstede-Aerdenhout
+Heerenveen
+Heerenveen IJsstadion
+Heerhugowaard
+Heerlen
+Heerlen Woonboulevard
+Heeze
+Heiloo
+Heino
+Helmond
+Helmond Brandevoort
+Helmond Brouwhuis
+Helmond 't Hout
+Hemmen-Dodewaard
+Hengelo
+Hengelo Gezondheidspark
+Hengelo Oost
+'s-Hertogenbosch
+'s-Hertogenbosch Oost
+Hillegom
+Hilversum
+Hilversum Media Park
+Hilversum Noord
+Hilversum Sportpark
+Hindeloopen
+Hoensbroek
+Hoevelaken
+Hollandsche Rading
+Holten
+Hoofddorp
+Hoogeveen
+Hoogezand-Sappemeer
+Hoogkarspel
+Hoorn
+Hoorn Kersenboogerd
+Horst-Sevenum
+Houten
+Houten Castellum
+Houthem-Sint Gerlach
+Houthem-St. Gerlach
+Hurdegaryp
+Kampen
+Kampen Zuid
+Kapelle-Biezelinge
+Kerkrade Centrum
+Kesteren
+Klarenbeek
+Klimmen-Ransdaal
+Koog aan de Zaan
+Koudum-Molkwerum
+Krabbendijke
+Krommenie-Assendelft
+Kropswolde
+Kruiningen-Yerseke
+Lage Zwaluwe
+Landgraaf
+Lansingerland-Zoetermeer
+Leerdam
+Leeuwarden
+Leeuwarden Camminghaburen
+Leiden Centraal
+Leiden Lammenschans
+Lelystad Centrum
+Lichtenvoorde-Groenlo
+Lochem
+Loppersum
+Lunteren
+Maarheeze
+Maarn
+Maarssen
+Maastricht
+Maastricht Noord
+Maastricht Randwyck
+Mantgum
+Mariënberg
+Martenshoek
+Meerssen
+Meppel
+Middelburg
+Mook-Molenhoek
+Naarden-Bussum
+Nieuw Amsterdam
+Nieuw Vennep
+Nieuwerkerk a/d IJssel
+Nieuwerkerk aan den IJssel
+Nijkerk
+Nijmegen
+Nijmegen Dukenburg
+Nijmegen Goffert
+Nijmegen Heyendaal
+Nijmegen Lent
+Nijverdal
+Nunspeet
+Nuth
+Obdam
+Oisterwijk
+Oldenzaal
+Olst
+Ommen
+Oosterbeek
+Opheusden
+Oss
+Oss West
+Oudenbosch
+Overveen
+Purmerend
+Purmerend Overwhere
+Purmerend Weidevenne
+Putten
+Raalte
+Ravenstein
+Reuver
+Rheden
+Rhenen
+Rijssen
+Rijswijk
+Rilland-Bath
+Roermond
+Roodeschool
+Roosendaal
+Rosmalen
+Rotterdam Alexander
+Rotterdam Blaak
+Rotterdam Centraal
+Rotterdam Lombardijen
+Rotterdam Noord
+Rotterdam Stadion
+Rotterdam Zuid
+Ruurlo
+Santpoort Noord
+Santpoort Zuid
+Sappemeer Oost
+Sassenheim
+Sauwerd
+Schagen
+Scheemda
+Schiedam Centrum
+Schin op Geul
+Schinnen
+Schiphol Airport
+Sittard
+Sliedrecht
+Sliedrecht Baanhoek
+Sneek
+Sneek Noord
+Soest
+Soest Zuid
+Soestdijk
+Spaubeek
+Stavoren
+Stedum
+Steenwijk
+Susteren
+Swalmen
+Tegelen
+Terborg
+Tiel
+Tiel Passewaaij
+Tilburg
+Tilburg Reeshof
+Tilburg Universiteit
+Twello
+Uitgeest
+Uithuizen
+Uithuizermeeden
+Usquert
+Utrecht Centraal
+Utrecht Leidsche Rijn
+Utrecht Lunetten
+Utrecht Maliebaan
+Utrecht Overvecht
+Utrecht Terwijde
+Utrecht Vaartsche Rijn
+Utrecht Zuilen
+Valkenburg
+Varsseveld
+Veendam
+Veenendaal Centrum
+Veenendaal-De Klomp
+Veenendaal West
+Velp
+Venlo
+Venray
+Vierlingsbeek
+Vleuten
+Vlissingen
+Vlissingen Souburg
+Voerendaal
+Voorburg
+Voorhout
+Voorschoten
+Voorst-Empe
+Vorden
+Vriezenveen
+Vroomshoop
+Vught
+Waddinxveen
+Waddinxveen Noord
+Waddinxveen Triangel
+Warffum
+Weert
+Weesp
+Wehl
+Westervoort
+Wezep
+Wierden
+Wijchen
+Wijhe
+Winschoten
+Winsum
+Winterswijk
+Winterswijk West
+Woerden
+Wolfheze
+Wolvega
+Workum
+Wormerveer
+IJlst
+Zaandam
+Zaandam Kogerveld
+Zaandijk Zaanse Schans
+Zaltbommel
+Zandvoort aan Zee
+Zetten-Andelst
+Zevenaar
+Zevenbergen
+Zoetermeer
+Zoetermeer Oost
+Zuidbroek
+Zuidhorn
+Zutphen
+Zwijndrecht
+Zwolle
+Zwolle Stadshagen</textarea>
     <br>
     De oplossing staat op de <a href="https://www.ns.nl/dagje-uit/ontspanning/puzzel.html" target="_blank">website van de NS</a>. Code staat op <a href="https://github.com/basgroot/puzzel-in-de-trein" target="_blank">Github</a>.
 </body>
