--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@ Zwijndrecht
 Zwolle
 Zwolle Stadshagen</textarea>
     <br>
-    De oplossing staat op de <a href="https://www.ns.nl/dagje-uit/ontspanning/puzzel.html" target="_blank">website van de NS</a>. Code staat op <a href="https://github.com/basgroot/puzzel-in-de-trein" target="_blank">Github</a>.
+    De oplossing staat op de <a href="https://www.ns.nl/dagje-uit/ontspanning/puzzel.html" target="_blank">website van de NS</a>.
+    <br>
+    Code staat op <a href="https://github.com/basgroot/puzzel-in-de-trein" target="_blank">Github</a>.
 </body>
 
 </html>
