--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="ROBOTS" content="INDEX, FOLLOW" />
     <meta name="VIEWPORT" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="https://basgroot.github.io/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js" defer></script>
     <title>Raad het station</title>
