--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <label>Stationsnaam: <input type="text" id="idInput" list="isStationsnamen" class="input" placeholder="Voer de fictieve stationsnaam in" value="Maarten rolt de car" /></label>
     <datalist id="isStationsnamen">
         <option value="Armbandatelier Jammers"></option>
+        <option value="Arme Hal"></option>
         <option value="Baanlicht Taureem"></option>
         <option value="Der Duit Mozart"></option>
         <option value="Long Hee"></option>
         <option value="Maarten rolt de car"></option>
         <option value="Pennie Vuwen"></option>
         <option value="Recht ut Craalent"></option>
+        <option value="Vind Echt Deur"></option>
     </datalist>
     <br>
     <div id="idOutput" class="output"></div>
